<resources>
    <string name="app_name">Éta</string>
    <string name="test_button">Skoða veitingastað</string>
    <string name="get_restaurant_error">Gat ekki náð í upplýsingar um veitingastað</string>
    <string name="one">1</string>
    <string name="title">Éta</string>
    <string name="search_button">Leita að Veitingastað</string>
    <string name="insert_button">Setja inn nýjan veitingastað</string>
    <string name="login_button">Srá inn notanda</string>
    <string name="insert_title">Skrá veitingastað</string>
    <string name="insert_name">Nafn á veitingastað</string>
    <string name="insert_address">Staðsetning</string>
    <string name="insert_about">Um veitingastaðinn</string>
    <string name="insert_tagTitle">Veldu tegundir</string>
    <string name="insert_tag_1">Indverskur</string>
    <string name="insert_tag_2">Tælenskur</string>
    <string name="insert_tag_3">Pizza</string>
    <string name="insert_tag_4">Skyndibiti</string>
    <string name="insert_tag_5">Vegan</string>
    <string name="insert_tag_6">Ítalskur</string>
    <string name="insert_tag_7">Hollt</string>
    <string name="insert_tag_8">Samlokur</string>
    <string name="insert_price_1">Ódýrt</string>
    <string name="insert_price_2">Meðaldýrt</string>
    <string name="insert_price_3">Dýrt</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="authentication_title">Innskráning</string>
    <string name="authentication_username_hint">Notandanafn</string>
    <string name="authenticatoin_login_button">Skrá inn</string>
    <string name="authentication_password_input">Lykilorð</string>
    <string name="authentication_login_success">Innsrkáning tókst</string>
    <string name="authentication_login_error">Innsrkáning mistókst</string>
    <string name="register_new_login">Nýskráning</string>
    <string name="register_manager">Eigandi</string>
    <string name="register_non_manager">Notandi</string>
    <string name="register_button_text">Nýskrá</string>
    <string name="register_email_input_hint">Netfang</string>
    <string name="n_skr">Nýskrá</string>
    <string name="register_info_success">Nýskráning tókst</string>
    <string name="register_info_error">Nýskráning mistókst</string>
    <string name="already_logged_in_message">Notandi er nú þegar skráður inn</string>
    <string name="already_logged_in_yes">Okei</string>
    <string name="already_logged_in_no">Skrá nýjan notanda</string>
    <string name="user_type_manager">MANAGER</string>
    <string name="user_type_casual">CASUAL</string>
    <string name="insert_priceTitle">Veldu verðbil</string>
    <string name="insert_buttonSubmit">Skrá Veitingastað</string>

    <string name="search_title">Leita Að Veitingastað</string>
    <string name="search_name">Nafn</string>
    <string name="search_location">Staðsetning</string>
    <string name="search_tag">Tegundir</string>
    <string name="search_cost">Verðbil</string>
    <string name="search_cost1">Ódýrt</string>
    <string name="search_cost2">Miðlungs</string>
    <string name="search_cost3">Dýrt</string>
    <string name="search_cb">Checkbox</string>
    <string name="search_submit">Leita</string>
    <string name="search_byName">Nafn</string>
    <string name="search_byPriceAndTags">Verðbil og tegundir</string>


    <string name="menu_login">Innskráning</string>
    <string name="menu_register">Nýskráning</string>
    <string name="menu_logout">Útskrá</string>

    <string name="restaurant_reviews_headline">Umsagnir</string>
    <string name="restaurant_loading_message">Sæki upplýsingar um veitingastað...</string>
    <string name="review_title">Setja inn umsögn</string>
    <string name="review_grade_one">1</string>
    <string name="review_grade_two">2</string>
    <string name="review_grade_three">3</string>
    <string name="review_grade_four">4</string>
    <string name="review_grade_five">5</string>
    <string name="review_button_text">Skrá umsögn</string>
    <string name="restaurant_insert_review_button">Skrifa umsögn</string>
    <string name="review_post_cancel">Hætta við</string>
    <string name="review_post_error">Gat ekki send inn umsögn</string>
    <string name="authentication_password_to_short">Lykilorð verður að innihalda 4 stafi</string>
    <string name="restaurant_email_input_error">Verður að vera gilt email</string>


</resources>
