<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    tools:context=".RegisterActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/GreyBG">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_login" />
    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/register_login_information"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:visibility="invisible"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/authentication_username_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/authentication_password_input"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/register_email_input_hint"
            android:inputType="textEmailAddress" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/register_type"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_manager"
                android:layout_marginEnd="10dp"
                android:id="@+id/register_type_manager"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/register_type_non_manager"
                android:layout_height="wrap_content"
                android:text="@string/register_non_manager"
                />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/register_button_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"

        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/inputs"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="-6dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/account" />
</RelativeLayout>