<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_title" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/authentication_login_information"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/authentication_username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/authentication_password_input"
        android:inputType="textPassword" />

    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    >

    <Button
        android:id="@+id/authentication_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authenticatoin_login_button"
        android:layout_marginBottom="40dp"
        />
    <Button
        android:id="@+id/authentication_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_skr"
        android:layout_marginBottom="40dp"
        />
</LinearLayout>

</RelativeLayout>